@@ -67,7 +67,7 @@ def main(args=[]):
     @args: used in test environment, to simulate different command line calls. Default is sys.argv[1:]
     """
     usage = "usage: %prog [options] [directories]"
-    p = optparse.OptionParser(usage=usage, version="%prog " + version, description=description, prog="pydirduplicatefinder.py")
+    p = optparse.OptionParser(usage=usage, version="%prog " + version, description=description, prog="dirduplicatefinder.py")
     p.add_option('--action', '-a', default="print", action="store", choices=ACTION_CHOICES+SECRET_ACTION_CHOISES, help='Choose an action to do when a duplicate is found. Valid options are %s; print is the default.' % ','.join(ACTION_CHOICES))
     p.add_option('--recursive', '-r', action="store_true", default=False, help='Also check files in subdirectories recursively.')
     #p.add_option('--recursion-level', '-l', default=0, help="When the --recursive option is used, you can also set the maximum deep to explore. This value to 0 (the default) is for no limit.")
@@ -179,7 +179,7 @@ def main(args=[]):
         return output
 
 def testrunner():
-    import tests as pddf_tests
+    from pydirduplicatefinder import tests as pddf_tests
     import unittest
     unittest.TextTestRunner(verbosity=2).run(pddf_tests.test_functions.alltests)
 
