@@ -5,7 +5,7 @@ __author__ = "Keul - lucafbb AT gmail.com"
 import unittest
 from testcase import PyDirDuplicateFinderTestCase
 
-from pydirduplicatefinder import main
+from duplicatefinder import main
 
 class TestPrintOption(PyDirDuplicateFinderTestCase):
     
